# ml_risk_control

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
configs/: model_torch.yaml  model_xgb.yaml
docs/: BATCH_SCORING_FLOW.md  DATA_DICTIONARY.md  DATA_QUALITY_RULES.md  EDA_SUMMARY.md  FEATURE_TREATMENT_DECISIONS.md  LOCAL_INFERENCE_FLOW.md  MODEL_ARTIFACTS.md  MODEL_CARD.md  MODEL_COMPARISON.md  PROJECT_REQUIREMENTS.md  RUNBOOK.md  STREAMLIT_APP_SPEC.md
scripts/: compare_models.py  render_model_figures.py  run_eda.py  train_baseline.py  train_torch.py  train_xgboost.py  validate_raw_data.py
sql/: 001_create_schemas.sql  002_create_raw_tables.sql  003_create_curated_tables.sql  004_create_features_tables.sql  005_create_serving_tables.sql
src/ml_risk_control/: __init__.py  config.py
src/ml_risk_control/data/: __init__.py  contracts.py  repositories.py  validation.py
src/ml_risk_control/evaluation/: __init__.py  comparison.py  metrics.py
src/ml_risk_control/features/: __init__.py  build.py
src/ml_risk_control/inference/: __init__.py  batch.py  service.py
src/ml_risk_control/models/: __init__.py  baseline.py  torch_model.py  xgboost_model.py
tests/integration/: test_compare_models.py  test_train_baseline.py  test_train_torch.py  test_train_xgboost.py
tests/unit/: test_baseline.py  test_batch_inference.py  test_feature_build.py  test_inference_service.py  test_metrics.py  test_model_comparison.py  test_repositories.py  test_torch_model.py  test_validation.py  test_xgboost_model.py
