[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-risk-control"
version = "0.1.0"
description = "A lightweight, extensible credit risk intelligence platform for delinquency prediction, explainability, and interactive decision support."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Harry Liu" }
]
dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "scikit-learn>=1.5,<2.0",
  "xgboost>=2.1,<3.0",
  "torch>=2.3,<3.0",
  "streamlit>=1.37,<2.0",
  "snowflake-connector-python[pandas]>=3.12,<4.0",
  "pyarrow>=17.0,<20.0",
  "pydantic>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
  "joblib>=1.4,<2.0",
  "imbalanced-learn>=0.12,<0.14",
  "shap>=0.46,<0.50",
  "matplotlib>=3.9,<4.0",
  "seaborn>=0.13,<0.14",
  "plotly>=5.24,<6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.5,<0.9",
  "mypy>=1.11,<2.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-markers",
  "--disable-warnings",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "app", "scripts"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
